# android

./: AndroidCodeSnippets.md  UsefulCommands.md
DummyProcessGen/: settings.gradle
automation/bash/: auto_lock_unlock
demo/ACLogger/: README.md  settings.gradle
demo/DatabaseCache/: README.md  gradle.properties  settings.gradle
demo/ImageDownloader/: README.md
demo/SdpDatabaseDemo/: settings.gradle
demo/ToastNotification/: settings.gradle
demo/TouchBlocker/: settings.gradle
demo/UserChecker/: settings.gradle
examples/AtomicFileRW/: gradle.properties  settings.gradle
examples/AvoidCrashBySignal/: settings.gradle
examples/ExampleBase/: README.md  gradle.properties  settings.gradle
examples/ExpandableListView/: settings.gradle
examples/FgService/: README.md  settings.gradle
examples/GetApkSignature/: README.md  settings.gradle
examples/HttpParser/: settings.gradle
examples/JniConversion/: settings.gradle
examples/JniConversion/app/src/main/cpp/: CMakeLists.txt  jni_conv.cpp  native_impl.cpp  native_impl.h
examples/OptionsMenu/: README.md  settings.gradle
examples/PasswordDialog/: README.md  settings.gradle
examples/RemoteService/: settings.gradle
examples/RuntimeExec/: settings.gradle
examples/SSLSocket/: .gitignore  settings.gradle
examples/SettingsActivity/: settings.gradle
examples/SimpleFileRW/: gradle.properties  settings.gradle
examples/SimpleRuntimeExec/: .gitignore  settings.gradle
examples/SimpleTextViewer/: settings.gradle
examples/SplashScreenBasic/: settings.gradle
examples/StartOnBootService/: settings.gradle
(+455 files in other folders)
